--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.0.1",
     "eslint-plugin-storybook": "^0.6.15",
-    "prettier": "^3.1.0",
+    "prettier": "3.2.4",
     "prop-types": "^15.8.1",
     "storybook": "^7.6.10",
     "webpack": "^5.90.0"
