--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@mantine/hooks": "^7.5.3",
     "@tabler/icons-react": "^2.47.0",
     "@testing-library/jest-dom": "^5.17.0",
+    "@testing-library/react": "^14.2.1",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.60",
